--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Composition</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="number_composition">Состав числа</string>
+    <string name="rules_of_game">"Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число.\n        \nПример: в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно быть число 3, потому что  3 + 4 = 7\n    "</string>
+    <string name="Clear">Понятно</string>
+    <string name="choose_level">Выберите уровень:</string>
+    <string name="test_mode">Тестовый</string>
+    <string name="question_mark"> \?\ </string>
 </resources>
