--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,6 @@
     <string name="Clear">Понятно</string>
     <string name="choose_level">Выберите уровень:</string>
     <string name="test_mode">Тестовый</string>
-    <string name="question_mark"> \?\ </string>
+    <string name="question_mark"> \? </string>
     <string name="progress_answers">Правильных ответов %s (минимум %s)</string>
 </resources>
