--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="test_mode">Тестовый</string>
     <string name="question_mark"> \? </string>
     <string name="progress_answers">Правильных ответов %s (минимум %s)</string>
+    <string name="level_easy">легкий</string>
+    <string name="level_normal">средний</string>
+    <string name="level_hard">тяжелый</string>
 </resources>
