--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,10 @@
     <string name="level_easy">легкий</string>
     <string name="level_normal">средний</string>
     <string name="level_hard">тяжелый</string>
+    <string name="game_over">Game Over</string>
+    <string name="required_score">Необходимое количество правильных ответов: %s</string>
+    <string name="score_answers">Ваш счет: %s</string>
+    <string name="required_percentage">Необходимый процент правильных ответов: %s</string>
+    <string name="score_percentage">Процент правильных ответов: %s</string>
+    <string name="try_again">Попробовать снова</string>
 </resources>
